Bug 482343 - The Ctrl+Shift+F opens the KFind with the search location always set to the home folder
Summary: The Ctrl+Shift+F opens the KFind with the search location always set to the h...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 24.02.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2024-03-03 21:30 UTC by martonmiklos
Modified: 2024-03-04 10:01 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 24.02.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description martonmiklos 2024-03-03 21:30:06 UTC
STEPS TO REPRODUCE
1. Open Dolphin
2. Ctrl+Shift+F
3. 

OBSERVED RESULT
The KFind path is always set to the home dir

EXPECTED RESULT
The KFind path should be set to the folder opened in Dolphin

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: KDE Neon
KDE Plasma Version:  
KDE Frameworks Version: 6.0.0
Qt Version: 6.6.2

ADDITIONAL INFORMATION
It was working in KDE5
Comment 1 Bug Janitor Service 2024-03-03 22:25:22 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/727
Comment 2 Nicolas Fella 2024-03-04 09:32:06 UTC
Git commit 5d96999a51690934c79316f9abdeebef0c098edb by Nicolas Fella.
Committed on 03/03/2024 at 22:25.
Pushed by meven into branch 'master'.

Open KFind with current dir

Amends 2cd3d58eec5695899c26ca66a631fb79867b6584

M  +2    -1    src/dolphinmainwindow.cpp

https://invent.kde.org/system/dolphin/-/commit/5d96999a51690934c79316f9abdeebef0c098edb
Comment 3 Nicolas Fella 2024-03-04 09:44:15 UTC
Git commit 26f38a8ee868b8ce01e5e8c97d808d676c819862 by Nicolas Fella.
Committed on 04/03/2024 at 09:44.
Pushed by nicolasfella into branch 'release/24.02'.

Open KFind with current dir

Amends 2cd3d58eec5695899c26ca66a631fb79867b6584
(cherry picked from commit 5d96999a51690934c79316f9abdeebef0c098edb)

M  +2    -1    src/dolphinmainwindow.cpp

https://invent.kde.org/system/dolphin/-/commit/26f38a8ee868b8ce01e5e8c97d808d676c819862