Open KFind with current dir

Amends 2cd3d58eec5695899c26ca66a631fb79867b6584

BUG: 482343
(cherry picked from commit 5d96999a51690934c79316f9abdeebef0c098edb)